style: corrected spacing

--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,7 @@ body {
   width: 100%;
   height: 100vh;
   background-image: url(https://images.pexels.com/photos/4761352/pexels-photo-4761352.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1);
+  background-color: #000;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -21,6 +22,7 @@ body {
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
+  overflow-y: hidden;
 }
 
 .cHeader {
@@ -28,6 +30,7 @@ body {
   align-items: center;
   justify-content: center;
   flex-direction: column;
+  padding-top: 90px;
 }
 .cHeader .cHeader__logo {
   width: 135px;
